--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -1,3 +1,15 @@
+/*** FONTS ***/
+body, a, p, li, label, input {
+  font-family: 'Merriweather';
+  font-weight: 400;
+  color: #000;
+}
+h1, h2 {
+  font-family: 'PT Serif';
+  color: #000;
+}
+/*** FONTS END ***/
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -199,9 +211,6 @@ html {
   box-sizing: inherit;
 }
 body {
-  color: #fff;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -231,11 +240,8 @@ h1 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 2.25rem;
   line-height: 1.1;
 }
 h2 {
@@ -248,9 +254,6 @@ h2 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.62671rem;
   line-height: 1.1;
@@ -396,6 +399,8 @@ figure {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
+  font-family: 'lato';
+  font-weight: 400;
 }
 pre {
   margin-left: 0;
