background on header or footer

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -19,6 +19,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f4b8da;
 }
 article,
 aside,
